Fix mobile views being squished
Sets the with to 100% when using mobile views, with some padding. Additionally, moves the items from the hamburger menu to the right-hand side instead of center/left

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -170,11 +170,21 @@ footer {
 // Responsive Styles
 // 
 @media (max-width: 600px) {
-    nav ul {
-        flex-direction: column;
+    main {
+        width: 100%;
+        padding: 2rem;
     }
 
-    footer nav ul {
+    .navbar-nav {
+        align-items: end;
+    }
+
+    nav ul {
         flex-direction: column;
+        align-items: center;
+    }
+
+    .custom-navbar .nav-link {
+        font-size: 1.5rem;
     }
 }
